<resources>
    <string name="app_name" translatable="false">Order Molder</string>

    <!--  DIALOGS  -->
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_save_doc">Save document?</string>

    <!--  MENU ITEMS  -->
    <string name="menu_save">Save</string>

    <!--  SNACKBAR  -->
    <string name="snackbar_action_undo">Undo</string>
    <string name="snackbar_doc_created">Document created</string>
    <string name="snackbar_doc_saved">Document saved</string>
    <string name="snackbar_doc_deleted">Document deleted</string>
    <string name="snackbar_empty_goods_list">Goods list is empty!</string>
    <string name="snackbar_empty_objects_list">Objects list is empty!</string>
    <string name="snackbar_unknown_doc_type">Unknown document type</string>
    <string name="snackbar_successful">Successful!</string>
    <string name="snackbar_unsuccessful">Something went wrong!</string>

    <!--  BUTTONS  -->
    <string name="button_exchange">Exchange</string>

    <!--  SIGNS  -->
    <string name="sign_plus" translatable="false">+</string>
    <string name="sign_minus" translatable="false">-</string>
    <string name="sign_currency_ruble" translatable="false">₽</string>

    <!-- SETTINGS -->
    <string name="settings_category_interface">Interface</string>
    <string name="settings_category_ftp" translatable="false">FTP</string>
    <string name="settings_item_theme">Theme</string>
    <string name="settings_item_url" translatable="false">URL</string>
    <string name="settings_item_port">Port</string>
    <string name="settings_item_username">Username</string>
    <string name="settings_item_password">Password</string>
    <string name="settings_item_passive">Use passive mode</string>

    <!--  TITLES  -->
    <string name="title_main">Main</string>
    <string name="title_documents">Documents</string>
    <string name="title_catalogs">Catalogs</string>
    <string name="title_reports">Reports</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_orders">Orders</string>
    <string name="title_activity_cash_receipts">Cash receipts</string>
    <string name="title_activity_companies">Companies</string>
    <string name="title_activity_partners">Partners</string>
    <string name="title_activity_warehouses">Warehouses</string>
    <string name="title_activity_goods">Goods</string>
    <string name="title_activity_units">Units</string>
    <string name="title_activity_unknown_doc">Unknown documents</string>
    <string name="title_activity_unknown_cat">Unknown catalog</string>
    <string name="title_new_order">New order</string>
    <string name="title_new_cash_receipt">New cash receipt</string>

    <!--  TABS  -->
    <string name="tab_main">Main</string>
    <string name="tab_order_goods">Goods</string>
    <string name="tab_cash_receipt_objects">Objects</string>

    <!--  CATALOGS  -->
    <string name="catalog_company_singular">Company</string>
    <string name="catalog_company_plural">Companies</string>
    <string name="catalog_partner_singular">Partner</string>
    <string name="catalog_partner_plural">Partners</string>
    <string name="catalog_warehouse_singular">Warehouse</string>
    <string name="catalog_warehouse_plural">Warehouses</string>
    <string name="catalog_good_singular">Good</string>
    <string name="catalog_good_plural">Goods</string>
    <string name="catalog_unit_singular">Unit</string>
    <string name="catalog_unit_plural">Units</string>

    <!--  DOCUMENTS  -->
    <string name="document_order_singular">Order</string>
    <string name="document_order_plural">Orders</string>
    <string name="document_cash_receipt_singular">Cash receipt</string>
    <string name="document_cash_receipt_plural">Cash receipts</string>

    <!--  REPORTS  -->
    <string name="report_price_singular">Price</string>
    <string name="report_price_plurallar">Prices</string>
    <string name="report_debt_singular">Debt</string>
    <string name="report_debt_plural">Debts</string>
    <string name="report_stock_singular">Stock</string>
    <string name="report_stock_plural">Stock</string>

    <!--  OBJECTS FIELDS  -->
    <string name="object_number">Number</string>
    <string name="object_date">Date</string>
    <string name="object_name">Name</string>
    <string name="object_full_name">Full name</string>
    <string name="object_sum">Sum</string>
    <string name="object_tin">TIN</string>

    <string-array name="documents">
        <item>Orders</item>
        <item>Cash receipts</item>
    </string-array>

    <string-array name="catalogs">
        <item>Companies</item>
        <item>Partners</item>
        <item>Warehouses</item>
        <item>Goods</item>
        <item>Units</item>
    </string-array>

    <string-array name="reports">
        <item>Price</item>
        <item>Debts</item>
        <item>Stock</item>
    </string-array>

    <!--  SETTINGS ARRAYS  -->
    <string-array name="settings_theme_entries">
        <item>Light</item>
        <item>Dark</item>
        <item>System default</item>
        <item>Set by Battery Saver</item>
    </string-array>
    <string-array name="settings_theme_values">
        <item>light</item>
        <item>dark</item>
        <item>system_default</item>
        <item>set_by_battery_saver</item>
    </string-array>
</resources>
