<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.takisoft.preferencex.PreferenceCategory app:title="@string/settings_category_interface">

        <ListPreference
            app:defaultValue="system_default"
            app:entries="@array/settings_theme_entries"
            app:entryValues="@array/settings_theme_values"
            app:key="theme"
            app:title="@string/settings_item_theme"
            app:useSimpleSummaryProvider="true" />

    </com.takisoft.preferencex.PreferenceCategory>

    <com.takisoft.preferencex.PreferenceCategory app:title="@string/settings_category_ftp">

        <com.takisoft.preferencex.EditTextPreference
            app:key="url"
            app:title="@string/settings_item_url"
            app:useSimpleSummaryProvider="true" />

        <com.takisoft.preferencex.EditTextPreference
            app:key="port"
            app:title="@string/settings_item_port"
            app:useSimpleSummaryProvider="true"
            android:inputType="numberDecimal"
            android:digits="0123456789" />

        <com.takisoft.preferencex.EditTextPreference
            app:key="username"
            app:title="@string/settings_item_username"
            app:useSimpleSummaryProvider="true" />

        <com.takisoft.preferencex.EditTextPreference
            app:key="password"
            app:title="@string/settings_item_password"
            android:inputType="textPassword" />

        <SwitchPreferenceCompat
            app:key="passive"
            app:title="@string/settings_item_passive" />

    </com.takisoft.preferencex.PreferenceCategory>

</PreferenceScreen>
